# opcua-plc-bridge

./: .dockerignore  ADR.md  AUTOMATIONS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  cliff.toml  deny.toml  setup-hooks.sh
.githooks/: commit-msg
.github/workflows/: binary-baseline.yml  binary-check.yml  ci.yml  release-binary.yml  release-tag.yml  release.yml  security.yml
core-model/: Cargo.toml
core-model/src/: arcstr_serde.rs  error.rs  lib.rs  registry.rs  tag.rs  tag_definition.rs  tag_definition_store.rs  tag_store.rs  tag_value.rs
driver/: Cargo.toml
driver/common/: Cargo.toml
driver/common/src/: lib.rs
driver/fins/: Cargo.toml
driver/fins/src/: config.rs  driver.rs  errors.rs  lib.rs  mapping.rs  write_request.rs
driver/modbus/: Cargo.toml
driver/modbus/src/: config.rs  driver.rs  errors.rs  lib.rs  mapping.rs  write_request.rs
driver/modbus/tests/: integration_tests.rs
e2e-tests/: docker-compose.chaos.yml  docker-compose.yml
e2e-tests/chaos/: Dockerfile  Dockerfile.test  run-scenarios.sh
e2e-tests/gateway/: Dockerfile  config.toml
e2e-tests/modbus-emulators/pymodbus/: Dockerfile  server.py
e2e-tests/modbus-emulators/stdlib/: Dockerfile  server.py
e2e-tests/opcua-clients/asyncua/: Dockerfile  test-runner.py
e2e-tests/opcua-clients/node-opcua/: Dockerfile  package.json  test-runner.js
examples/: config.toml
opcua-server/: Cargo.toml
opcua-server/src/: config.rs  error.rs  lib.rs  native.rs  types.rs  writes.rs
opcua-server/tests/: integration.rs
runtime/: Cargo.toml
runtime/src/: cli.rs  config.rs  main.rs  runtime_driver.rs  tags.rs  write_handler.rs
