[package]
name = "driver-common"
version = "0.2.2"
edition = "2021"
publish = false
description = "Shared driver traits and utilities for protocol drivers (FINS, Modbus, ...)"
license = "Hippocratic License 3.0"
repository = "https://github.com/BlueSialia/opcua-plc-bridge"
documentation = "https://github.com/BlueSialia/opcua-plc-bridge/blob/main/driver/common"
readme = "../../README.md"
authors = ["Jorge Domínguez Arnáez (BlueSialia) <bluesialia@gmail.com>"]

[lib]
name = "driver_common"
path = "src/lib.rs"

[dependencies]
# Small helper to allow async functions on traits for trait objects
async-trait = "0.1"

# Core internal model (workspace member) — required by the common trait for types such as TagValue
core-model.workspace = true

# JSON helper used by the runtime/drivers for health payloads
serde_json = "1.0"

[dev-dependencies]
# Provide tokio for crate tests that require an async runtime.
# Keep this as a dev-dependency to avoid forcing the runtime on downstream consumers.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[package.metadata]
keywords = ["driver", "plc", "fins", "modbus", "common"]
categories = ["network-programming", "embedded"]
