[package]
name = "driver-modbus"
version = "0.2.2"
edition = "2021"
publish = false
description = "Modbus/TCP driver for the opcua-plc-bridge"
license = "Hippocratic License 3.0"
repository = "https://github.com/BlueSialia/opcua-plc-bridge"
documentation = "https://github.com/BlueSialia/opcua-plc-bridge/blob/main/driver/modbus"
authors = ["Jorge Domínguez Arnáez (BlueSialia) <bluesialia@gmail.com>"]
readme = "../../README.md"

[lib]
name = "driver_modbus"
path = "src/lib.rs"

[dependencies]
# Core internal model (workspace member)
core-model.workspace = true
driver-common.workspace = true

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

# Async modbus client (Modbus TCP, async). Version chosen for compatibility with tokio 1.x.
tokio-modbus = { version = "0.17", features = ["server", "tcp-server"] }

# Utilities & ergonomics
serde = { version = "1.0", features = ["derive"] }
# Chrono for timestamps (used by drivers)
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
byteorder = "1"

[package.metadata]
keywords = ["modbus", "plc", "driver", "opcua", "modbus-tcp"]
categories = ["network-programming", "embedded"]
